<resources>
    <string name="app_name">CollegeManagement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_notification">New Notification</string>
    <string name="info">Profile</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="added_by">Added By</string>
    <string name="detail">Detail</string>
</resources>
